--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.1.1",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
+    "mongoose-query-paginate": "^1.0.3",
     "multer": "^1.3.0",
     "nodemon": "^1.15.1",
     "pem": "^1.12.3",
